--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -51,9 +51,60 @@
 		</div>
 
 		<div class="flex-1 relative flex items-center justify-center">
-			<div id="global-div-search" 
-				class="bg-black/30 w-full h-full rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-			</div>
+			<div id="global-div-search" class="bg-black/30 w-full h-full rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] p-8">
+    <!-- Games Statistics -->
+    <div class="mb-8">
+        <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="games_stats">Games Statistics</h3>
+        <div class="grid grid-cols-3 gap-6">
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+                <p class="text-[#00FFFF] text-sm mb-2">Total Games</p>
+                <p class="text-4xl font-bold text-[#FFD700]">42</p>
+            </div>
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
+                <p class="text-[#00FF00] text-sm mb-2">Victories</p>
+                <p class="text-4xl font-bold text-[#FFD700]">28</p>
+            </div>
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
+                <p class="text-[#FF2E9F] text-sm mb-2">Defeats</p>
+                <p class="text-4xl font-bold text-[#FFD700]">14</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Tournament Statistics -->
+    <div class="mb-8">
+        <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="tournament_stats">Tournament Statistics</h3>
+        <div class="grid grid-cols-3 gap-6">
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
+                <p class="text-[#00FFFF] text-sm mb-2">Tournaments Played</p>
+                <p class="text-4xl font-bold text-[#FFD700]">12</p>
+            </div>
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
+                <p class="text-[#00FF00] text-sm mb-2">Tournaments Won</p>
+                <p class="text-4xl font-bold text-[#FFD700]">5</p>
+            </div>
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
+                <p class="text-[#FF2E9F] text-sm mb-2">Tournaments Lost</p>
+                <p class="text-4xl font-bold text-[#FFD700]">7</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Points Statistics -->
+    <div>
+        <h3 class="text-2xl font-bold text-[#FFD700] mb-4 drop-shadow-[0_0_10px_#FFD700]" data-i18n="points_stats">Points Statistics</h3>
+        <div class="grid grid-cols-2 gap-6">
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
+                <p class="text-[#B026FF] text-sm mb-2">Total Points</p>
+                <p class="text-4xl font-bold text-[#FFD700]">1337</p>
+            </div>
+            <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
+                <p class="text-[#B026FF] text-sm mb-2">Points per Game</p>
+                <p class="text-4xl font-bold text-[#FFD700]">31.8</p>
+            </div>
+        </div>
+    </div>
+</div>
 			<div id="history-div-search" 
 				class="hidden w-full h-[75vh] space-y-6 overflow-y-auto p-6 bg-black/30 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF] mx-auto">
 			</div>
