--- a/frontend/src/pages/aigame.html
+++ b/frontend/src/pages/aigame.html
@@ -1,23 +1,34 @@
-<div class="flex justify-center items-center">
-	<!-- Joueur 1 -->
-	<div class="mr-12 flex flex-col items-center">
-		<h1 id="name-player1" class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
-		<canvas id="statPlayer1" width="250" height="600" class="mt-2 border-4 bg-black border-[#00FFFF] shadow-[0_0_10px_#00FFFF] rounded-[10px]"></canvas>
-	</div>
+<div class="relative w-screen h-screen">
+    <div class="absolute top-4 right-4">
+        <a href="/home" data-link class="w-20 h-9 border-2 border-[#00FFFF] bg-black/30 rounded-xl flex items-center justify-center cursor-pointer hover:bg-[#00FFFF]/20 transition-all duration-200 shadow-[0_0_10px_#00FFFF]">
+            <span class="text-[#FFD700] font-bold text-lg" data-i18n="home">HOME</span>
+        </a>
+    </div>
+	<div class="flex justify-center items-center mt-20">
 
-	<!-- Zone centrale -->
-	<div class="flex flex-col items-center">
-		<div id="gameDiv" class="mb-9 p-0.5 bg-gradient-to-r from-[#00FFFF] to-[#FF007A] rounded-[10px]">
-			<canvas id="topCanvas" width="300" height="70" class="bg-black rounded-[10px]"></canvas>
+		<div class="mr-12 flex flex-col items-center">
+			<h1 id="name-player1" class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]"></h1>
+			<div id="keyPlayer1" class="mt-2 border-4 w-[300px] h-[600px] bg-black border-[#00FFFF] shadow-[0_0_10px_#00FFFF] rounded-[10px] flex flex-col items-center p-4">
+				<h2 class="text-[#00FFFF] text-2xl mt-4 font-bold mb-8" data-i18n="controls">Controls:</h2>
+				<div class="flex flex-col gap-24 mt-10">
+					<img src="/images/up.png" alt="W key" class="w-32 h-32">
+					<img src="/images/down.png" alt="S key" class="w-32 h-32">
+				</div>
+			</div>
 		</div>
-		<div id="gameDiv" class="p-1 bg-gradient-to-r from-[#00FFFF] to-[#FF007A] rounded-[5px]">
-			<canvas id="gameCanvas" width="800" height="600" class="bg-black rounded-[5px]"></canvas>
-		</div>
-	</div>
 
-	<!-- Joueur 2 -->
-	<div class="ml-12 flex flex-col items-center">
-		<h1 id="name-player2" class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Ai</h1>
-		<canvas id="statPlayer2" width="250" height="600" class="mt-2 border-4 bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></canvas>
+		<div class="flex flex-col items-center">
+			<div class="mb-9 p-0.5 bg-gradient-to-r from-[#00FFFF] to-[#FF007A] rounded-[10px]">
+				<canvas id="topCanvas" width="300" height="70" class="bg-black rounded-[10px]"></canvas>
+			</div>
+			<div  class="p-1 bg-gradient-to-r from-[#00FFFF] to-[#FF007A] rounded-[5px]">
+				<canvas id="gameCanvas" width="800" height="600" class="bg-black rounded-[5px]"></canvas>
+			</div>
+		</div>
+
+		<div class="ml-12 flex flex-col items-center">
+			<h1 id="name-player2" class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]"></h1>
+			<div id="keyPlayer2" class="mt-2 border-4 w-[300px] h-[600px] bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px]"></div>
+		</div>
 	</div>
 </div>
