--- a/frontend/src/pages/search.html
+++ b/frontend/src/pages/search.html
@@ -58,15 +58,15 @@
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
                 <p class="text-[#00FFFF] text-sm mb-2">Total Games</p>
-                <p class="text-4xl font-bold text-[#FFD700]">42</p>
+                <p id="total_games" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
                 <p class="text-[#00FF00] text-sm mb-2">Victories</p>
-                <p class="text-4xl font-bold text-[#FFD700]">28</p>
+                <p id="wins_game" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
                 <p class="text-[#FF2E9F] text-sm mb-2">Defeats</p>
-                <p class="text-4xl font-bold text-[#FFD700]">14</p>
+                <p id="lost_game" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
     </div>
@@ -77,15 +77,15 @@
         <div class="grid grid-cols-3 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
                 <p class="text-[#00FFFF] text-sm mb-2">Tournaments Played</p>
-                <p class="text-4xl font-bold text-[#FFD700]">12</p>
+                <p id="tournament_played" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#00FF00] shadow-[0_0_10px_#00FF00]">
                 <p class="text-[#00FF00] text-sm mb-2">Tournaments Won</p>
-                <p class="text-4xl font-bold text-[#FFD700]">5</p>
+                <p id="tournament_won" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#FF2E9F] shadow-[0_0_10px_#FF2E9F]">
                 <p class="text-[#FF2E9F] text-sm mb-2">Tournaments Lost</p>
-                <p class="text-4xl font-bold text-[#FFD700]">7</p>
+                <p id="tournament_lost" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
     </div>
@@ -96,11 +96,11 @@
         <div class="grid grid-cols-2 gap-6">
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
                 <p class="text-[#B026FF] text-sm mb-2">Total Points</p>
-                <p class="text-4xl font-bold text-[#FFD700]">1337</p>
+                <p id="total_points" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
             <div class="bg-black/40 p-6 rounded-xl border-2 border-[#B026FF] shadow-[0_0_10px_#B026FF]">
                 <p class="text-[#B026FF] text-sm mb-2">Points per Game</p>
-                <p class="text-4xl font-bold text-[#FFD700]">31.8</p>
+                <p id="average_points" class="text-4xl font-bold text-[#FFD700]"></p>
             </div>
         </div>
     </div>
