--- a/frontend/src/pages/tournament_statistics.html
+++ b/frontend/src/pages/tournament_statistics.html
@@ -68,8 +68,8 @@
 					</div>
 			
 					<div class="flex flex-col items-center justify-center bg-black/30 h-40 rounded-xl w-1/3 border-2 space-y-3 border-[#00FFFF] shadow-[0_0_10px_#00FFFF]">
-						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="best_rank" >BEST RANKING</div>
-						<div id="best_ranking" class="text-5xl text-[#FFD700] text-center font-bold"></div>
+						<div class="text-5xl text-[#00FFFF] text-center font-semibold" data-i18n="best_rank" >LAST RANKING</div>
+						<div id="last_ranking" class="text-5xl text-[#FFD700] text-center font-bold"></div>
 					</div>
 			
 					<div class="flex items-center justify-center w-2/4 h-80 rounded-2xl bg-black/30 border-2 border-[#00FFFF] space-x-5 shadow-[0_0_10px_#00FFFF]">
