--- a/frontend/src/pages/overall_statistics.html
+++ b/frontend/src/pages/overall_statistics.html
@@ -54,7 +54,7 @@
 				Overall
 			</a>
 			<a id="Tournament-btn" href="/profile/statistics/tournaments" data-link 
-				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="tournament">
+				class="tab-button px-10 py-2 rounded-xl font-semibold bg-transparent border-2 border-[#00FFFF] text-[#FFD700] hover:bg-[#00FFFF]/20 transition shadow-[0_0_10px_#00FFFF]" data-i18n="tournament_trad">
 				Tournament
 			</a>
 		</div>
