--- a/frontend/src/pages/localgame.html
+++ b/frontend/src/pages/localgame.html
@@ -7,7 +7,7 @@
 	<div class="flex justify-center items-center mt-20">
 
 		<div class="mr-12 flex flex-col items-center">
-			<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]">Player 1</h1>
+			<h1 class="text-center text-[50px] text-[#00FFFF] font-bold drop-shadow-[0_0_10px_#00FFFF]" data-i18n="player_1_trad" >Player 1</h1>
 			<div id="keyPlayer1" class="mt-2 border-4 w-[300px] h-[600px] bg-black border-[#00FFFF] shadow-[0_0_10px_#00FFFF] rounded-[10px] flex flex-col items-center p-4">
 				<h2 class="text-[#00FFFF] text-2xl mt-4 font-bold mb-8" data-i18n="controls">Controls:</h2>
 				<div class="flex flex-col gap-24 mt-10">
@@ -27,7 +27,7 @@
 		</div>
 
 		<div class="ml-12 flex flex-col items-center">
-			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]">Player 2</h1>
+			<h1 class="text-center text-[50px] text-[#FF007A] font-bold drop-shadow-[0_0_10px_#FF007A]" data-i18n="player_2_trad" >Player 2</h1>
 			<div id="keyPlayer2" class="mt-2 border-4 w-[300px] h-[600px] bg-black border-[#FF007A] shadow-[0_0_10px_#FF007A] rounded-[10px] flex flex-col items-center p-4">
 				<h2 class="text-[#FF007A] text-2xl mt-4 font-bold mb-8" data-i18n="controls">Controls:</h2>
 				<div class="flex flex-col gap-24 mt-10">
